tests/baselines/reference/es6ImportWithoutFromClauseInEs5(target=es2015).errors.txt
es6ImportWithoutFromClauseInEs5_1.ts(1,8): error TS2882: Cannot find module or type declarations for side-effect import of 'es6ImportWithoutFromClauseInEs5_0'.


==== es6ImportWithoutFromClauseInEs5_0.ts (0 errors) ====
    export var a = 10;
    
==== es6ImportWithoutFromClauseInEs5_1.ts (1 errors) ====
    import "es6ImportWithoutFromClauseInEs5_0";
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2882: Cannot find module or type declarations for side-effect import of 'es6ImportWithoutFromClauseInEs5_0'.